# yt_aspect

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: build-test.yaml  build-verification.yaml  create-gh-release.yaml  publish-to-pypi.yaml  style-checks.yaml  weekly-test.yaml
examples/: slice.py
tests/: conftest.py  lint_requirements.txt  test_outputs.py  test_registry.py  test_requirements.txt  test_utilities.py
yt_aspect/: __init__.py  _utilities.py  api.py  data_structures.py  fields.py  io.py  util.py
yt_aspect/_pvtu_test_data/: data.toml
