[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_aspect"
version = "0.1.0"
authors = [
  { name="Chris Havlin", email="chris.havlin@gmail.com" },
]
description="A yt plugin for loading ASPECT output"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=['yt>4.1.0', 'xmltodict']


[project.urls]
"Homepage" = "https://github.com/data-exp-lab/yt_aspect"
"Bug Tracker" = "https://github.com/data-exp-lab/yt_aspect/issues"

